# libglez

./: CMakeLists.txt
ftgl/: CMakeLists.txt  distance-field.cpp  distance-field.hpp  edtaa3func.cpp  edtaa3func.hpp  font-manager.cpp  font-manager.hpp  freetype-gl.hpp  makefont.cpp  markup.hpp  mat4.cpp  mat4.hpp  platform.cpp  text-buffer.cpp  text-buffer.hpp  texture-atlas.cpp  texture-atlas.hpp  texture-font.cpp  texture-font.hpp  utf8-utils.cpp  utf8-utils.hpp  vec234.hpp  vector.cpp  vector.hpp  vertex-attribute.cpp  vertex-attribute.hpp  vertex-buffer.cpp  vertex-buffer.hpp  vertex-buffer.impl.hpp
gl/: CMakeLists.txt  mat4.hpp
include/glez/: CMakeLists.txt  DrawQueue.hpp  Font.hpp  Render.hpp  Sprite.hpp  Texture.hpp  detail_forward.hpp  draw.hpp  font.hpp  glez.hpp  shader.hpp
include/glez/detail/: CMakeLists.txt  CommandBuffer.hpp  DrawCommand.hpp  VertexDoubleBuffer.hpp  font.hpp  program.hpp  record.hpp  render.hpp  texture.hpp
include/glez/detail/freetype-gl/: CMakeLists.txt  freetype-gl.hpp  opengl.hpp  texture-atlas.hpp  texture-font.hpp  vec234.hpp  vertex-buffer.hpp  vertex-buffer.impl.hpp
src/: CMakeLists.txt  DrawQueue.cpp  Font.cpp  Render.cpp  Texture.cpp  draw.cpp  font.cpp  glez.cpp  shader.cpp
src/detail/: CMakeLists.txt  CommandBuffer.cpp  DrawCommand.cpp  VertexDoubleBuffer.cpp  font.cpp  program.cpp  record.cpp  render.cpp
src/detail/freetype-gl/: CMakeLists.txt  font-manager.cpp  makefont.cpp  text-buffer.cpp  texture-atlas.cpp  texture-font.cpp  utf8-utils.cpp  vertex-attribute.cpp  vertex-buffer.cpp
